# drake-pytorch

./: .gitignore  README.md
cpp/drake+pytorch/: CMakeLists.txt  README.md  script.sh
cpp/drake+pytorch/src/pytorch_acrobot/: CMakeLists.txt  NNGradientTest.cpp  NNSystem.cpp  NNSystem.h  NNTestSetup.cpp
cpp/drake+pytorch/src/pytorch_acrobot/old/: MLPTestSetup.cpp
cpp/drake+pytorch/src/pytorch_alone/: .CMakeLists.txt.swp  .pytorch-alone.cpp.swp  CMakeLists.txt  pytorch-alone.cc  pytorch-alone.cpp
packaged_cpp/torchlib_cpu/: README.md
packaged_python/: NNSystem.py  NNSystemKaty.py  NNSystemTest.py  NNTestSetup.py  README.md  networks.py
packaged_python/examples/: NNSystemHelper.py  NNTest.py
python/: 1) Trivial Prog.ipynb  2) Direct Transcription.ipynb  Big Sweeps Graphing.ipynb  Cartpole swing-up and peakiness testing 01-25.ipynb  Igor + DL (prong 2)-Copy1.ipynb  Igor + DL (prong 2).ipynb  Igor's Block-Alternating Optimization.ipynb  MTO_pend.csv  Makefile  MultipleTrajOpt Class Testing Copy.ipynb  MultipleTrajOpt Class Testing.ipynb  NNSystem.py  NNSystemHelper.py  NNSytemHelper.py  NNTestGradients.py  NNTestSetup.py  P1_single_traj_opt.py  P2_constrained_traj_opt.py  PendulumSimpleFeedback.ipynb  Playground.ipynb  Real NN Constraint Testing.ipynb  Scaling Tests - 01-09-2019.ipynb  Scaling Tests - 01-10-2019 (Minibatching!).ipynb  Scaling Tests - 01-11-2019 (More Minibatching).ipynb  Traj Opt + Supervised Learning Isolation Experiments.ipynb  algorithms.py  cartpole_vi_sweep.py  code_for_writeup.py  constraint_timeline_diagram.py  cuda_pytorch_test.py  dircol_swingup.py.ipynb  good_igor_nn_pend.pt  igor.py  main.py  multiple_traj_opt.py  numpy_saves  parallel_test.py  remote_run.py  remote_train.py  set_2.ipynb  (+3 more)
python/.ipynb_checkpoints/: Playground-checkpoint.ipynb
python/diagrams/: foo.cpuprofile  perf.py.prof  perf2.py.prof
python/nn_system/: NNSystem.py  NNSystemHelper.py  NNTestGradients.py  NNTestSetup.py  __init__.py  networks.py
python/playgrounds/: __init__.py  main.py
python/traj/: vis.py  (+6 more)
(+240 files in other folders)
